// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.languages.nodejs.integration;

option go_package = "namespacelabs.dev/foundation/languages/nodejs/integration";

import "schema/schema.proto";
import "workspace/source/protos/filedescset.proto";

message OpGenServer {
    foundation.schema.Server server             = 1;
    repeated foundation.schema.Node loaded_node = 2;
}

message OpGenNode {
    foundation.schema.Node node                 = 1;
    repeated foundation.schema.Node loaded_node = 2;
}

message OpGenNodeStub {
    foundation.schema.Node node     = 1;
    string                 filename = 2;
}

message OpGenGrpc {
    string                                                      package_name = 1;
    foundation.workspace.source.protos.FileDescriptorSetAndDeps protos       = 2;
}

// Generate required files in a Yarn root.
message OpGenYarnRoot {
    string yarn_root_pkg_name = 1;
    // Multiple packages may have the same yarn root.
    // This field is needed to explicitly list workspaces in the yarn root package.json.
    // Relative to workspace root.
    string rel_location = 2;
}
